# sStock

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  openapi.json  pyproject.toml  requirements.txt  test_fund_fix.py  test_fund_reservation.py  ТЗ.txt
.github/workflows/: build_deploy.yml
api/: Dockerfile  __init__.py  alembic.ini  auth.py  database.py  docker-entrypoint.sh  main.py  models.py  requirements.txt  traces_utils.py
api/migrations/: env.py
api/migrations/versions/: 2025_06_06_16_45_00_initial.py
api/scripts/: create_admin.py  init_db.py
api/static/: index.html
app/: auth.py  database.py  main.py  models.py
app/models/: balance.py  order.py  transaction.py
app/services/: order_service.py
cert/: nginx.crt  nginx.key
migrations/: env.py
migrations/versions/: initial.py
nginx/: Dockerfile  nginx.yc.conf
tests/: test_api.py  test_database.py  test_models.py  test_orderbook.py
yc/: docker-compose.yc.yml
